# polaris

./: .gitignore  .markdownlint.json  Cargo.toml  Makefile.toml  README.md  polaris-server.Dockerfile  polaris-terminal.Dockerfile
.cargo/: config.toml
.github/workflows/: build_server.yml  build_terminal.yml  ci.yml  run_test.yml
crates/example/: Cargo.toml  README.md
crates/example/src/: config.rs  context.rs  lib.rs  main.rs  state.rs  tools.rs
crates/polaris_agent/: Cargo.toml
crates/polaris_agent/src/: lib.rs
crates/polaris_core/: Cargo.toml  README.md
crates/polaris_core/src/: lib.rs  server_info.rs  time.rs  tracing_plugin.rs
crates/polaris_core_plugins/: Cargo.toml  README.md
crates/polaris_core_plugins/persistence_macros/: Cargo.toml
crates/polaris_core_plugins/persistence_macros/src/: lib.rs  storable.rs
crates/polaris_core_plugins/src/: io.rs  lib.rs  persistence.rs  server_info.rs  time.rs  tracing_plugin.rs
crates/polaris_core_plugins/tests/: storable_tests.rs
crates/polaris_graph/: Cargo.toml  README.md  limitations.md
crates/polaris_graph/src/: dev.rs  edge.rs  executor.rs  graph.rs  lib.rs  node.rs  predicate.rs
crates/polaris_graph/src/hooks/: api.rs  events.rs  mod.rs  schedule.rs
crates/polaris_graph/tests/: composition.rs  edge_cases.rs  graph_builder.rs  integration.rs  test_utils.rs  validation.rs
crates/polaris_internal/: Cargo.toml
crates/polaris_internal/src/: lib.rs
crates/polaris_macro_utils/: Cargo.toml
crates/polaris_macro_utils/src/: lib.rs
crates/polaris_model_providers/: Cargo.toml  README.md
crates/polaris_model_providers/src/: lib.rs  schema.rs
crates/polaris_model_providers/src/anthropic/: client.rs  mod.rs  plugin.rs  provider.rs  types.rs
crates/polaris_model_providers/src/bedrock/: mod.rs  plugin.rs  provider.rs  request.rs  response.rs  types.rs
crates/polaris_model_providers/src/openai/: mod.rs  plugin.rs  provider.rs
crates/polaris_model_providers/tests/: anthropic_integration.rs  bedrock_integration.rs  openai_integration.rs
crates/polaris_model_providers/tests/common/: mod.rs
crates/polaris_models/: Cargo.toml  README.md
crates/polaris_models/src/: error.rs  lib.rs  plugin.rs  registry.rs
crates/polaris_models/src/llm/: error.rs  mod.rs  model.rs  provider.rs  types.rs
crates/polaris_system/: Cargo.toml  README.md
crates/polaris_system/src/: api.rs  lib.rs  server.rs
crates/polaris_system/src/param/: access.rs  mod.rs
crates/polaris_system/src/plugin/: mod.rs  schedule.rs
crates/polaris_system/src/resource/: mod.rs  output.rs  resource.rs
crates/polaris_system/src/system/: mod.rs
crates/polaris_system/system_macros/: Cargo.toml  README.md
crates/polaris_system/system_macros/src/: crate_path.rs  lib.rs
crates/polaris_system/tests/: compile_tests.rs  concurrency.rs  system.rs  system_macro_tests.rs
crates/polaris_system/tests/compile_fail/: destructured_param.rs  non_send_output.rs  non_system_param.rs  self_param.rs  sync_system.rs
crates/polaris_system/tests/compile_pass/: fallible_no_params.rs  fallible_system.rs  infallible_system.rs
crates/polaris_tools/: Cargo.toml
crates/polaris_tools/src/: error.rs  lib.rs  param.rs  registry.rs  schema.rs  tool.rs  toolset.rs
crates/polaris_tools/tests/: compile_fail.rs  integration.rs
crates/polaris_tools/tests/compile_fail/: extern_tool.rs  generic_tool.rs  standalone_with_self.rs  sync_tool.rs  toolset_method_mut_self.rs  toolset_method_no_self.rs  unsafe_tool.rs
crates/polaris_tools/tool_macros/: Cargo.toml
crates/polaris_tools/tool_macros/src/: common.rs  crate_path.rs  lib.rs  tool_fn.rs  toolset.rs
docs/: README.md  philosophy.md  taxonomy.md
docs/reference/: agents.md  api.md  graph.md  plugins.md  system.md
examples/: Cargo.toml  README.md
examples/react/: config.rs  context.rs  lib.rs  main.rs  state.rs  tools.rs
examples/sessions/: main.rs  plugin.rs
examples/src/: lib.rs
examples/src/plugins/: file_tools.rs  mod.rs  session.rs  terminal_io.rs
examples/src/react_agent/: agent.rs  config.rs  context.rs  mod.rs
src/: lib.rs
