[package]
name = "polaris"
version = "0.0.1"
edition = "2024"
categories = ["asynchronous", "development-tools"]
description = "A unified agent runtime where agent patterns are first-class, composable, and optimizable abstractions."
exclude = ["assets/", "tools/", ".github/", "crates/"]
homepage = "https://getradiant.ai"
keywords = ["ai", "agents", "ecs", "async", "framework"]
license = "Apache-2.0"
repository = "https://github.com/RadiantAILabs/polaris"
rust-version = "1.93.0"
autoexamples = false

[workspace]
resolver = "2"
members = [
    # All of Polaris internal crates
    "crates/*",
    "examples",
]

[workspace.lints.clippy]
uninlined-format-args = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
needless_lifetimes = "allow"
too_many_arguments = "allow"
nonstandard_macro_braces = "warn"
print_stdout = "warn"
print_stderr = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

too_long_first_doc_paragraph = "allow"

std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
alloc_instead_of_core = "allow"

allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[workspace.lints.rust]
missing_docs = "warn"
mismatched_lifetime_syntaxes = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
needless_lifetimes = "allow"
too_many_arguments = "allow"
nonstandard_macro_braces = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

too_long_first_doc_paragraph = "allow"

std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
alloc_instead_of_core = "allow"

allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[features]
default = []
bedrock = ["polaris_internal/bedrock"]
openai = ["polaris_internal/openai"]

[dependencies]
polaris_internal = { path = "crates/polaris_internal", version = "0.0.1" }
tracing = { version = "0.1.43", default-features = false, optional = true }
