[package]
name = "examples"
version = "0.0.1"
description = "Example ReAct agent built with Polaris."
edition = "2024"
repository = "https://github.com/RadiantAILabs/polaris"
rust-version = "1.93.0"
publish = false

[lints.clippy]
allow_attributes_without_reason = "allow"

[lints.rust]
missing_docs = "allow"

[dependencies]
polaris = { path = "..", features = ["bedrock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
tracing = "0.1"
dotenvy = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
parking_lot = "0.12"

[lib]
path = "react/lib.rs"

[[bin]]
name = "react"
path = "react/main.rs"

[[bin]]
name = "sessions"
path = "sessions/main.rs"
