[package]
name = "example"
version = "0.0.1"
description = "Example ReAct agent built with Polaris."
edition = "2024"
repository = "https://github.com/TeamRadiantAI/polaris"
rust-version = "1.93.0"
publish = false

[lints]
workspace = true

[dependencies]
polaris_agent = { path = "../polaris_agent" }
polaris_graph = { path = "../polaris_graph" }
polaris_system = { path = "../polaris_system" }
polaris_models = { path = "../polaris_models" }
polaris_model_providers = { path = "../polaris_model_providers" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
tracing = "0.1"
dotenvy = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[bin]]
name = "react"
path = "src/main.rs"
