[package]
name = "polaris_core_plugins"
version = "0.0.1"
description = "Core infrastructure plugins for Polaris."
edition = "2024"
keywords = ["polaris", "plugin", "infrastructure"]

[lints]
workspace = true

[dependencies]
polaris_system = { path = "../polaris_system" }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tokio = { version = "1.43", features = ["rt", "sync", "macros"] }

[features]
default = []
test-utils = []
