[package]
name = "polaris_core_plugins"
version = "0.0.1"
description = "Core infrastructure plugins for Polaris."
edition = "2024"
keywords = ["polaris", "plugin", "infrastructure"]

[lints]
workspace = true

[dependencies]
polaris_system = { path = "../polaris_system" }
persistence_macros = { path = "persistence_macros" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tokio = { version = "1.43", features = ["rt", "sync", "macros"] }

[features]
default = []
test-utils = []
