[package]
name = "polaris_model_providers"
version = "0.0.1"
description = "Model provider implementations for Polaris"
edition = "2024"

[lints]
workspace = true

[features]
default = ["anthropic"]
anthropic = []
openai = ["dep:async-openai"]
bedrock = [
    "dep:aws-sdk-bedrockruntime",
    "dep:aws-config",
    "dep:aws-smithy-types",
    "dep:tokio",
    "dep:base64",
]

[dependencies]
polaris_models = { path = "../polaris_models" }
polaris_system = { path = "../polaris_system" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.1", features = ["json"] }
tracing = "0.1"

# OpenAI dependencies
async-openai = { version = "0.33", optional = true, default-features = false, features = [
    "rustls",
    "responses",
    "response-types",
] }

# AWS Bedrock dependencies
aws-sdk-bedrockruntime = { version = "1.124.0", optional = true }
aws-config = { version = "1.5", features = [
    "behavior-version-latest",
], optional = true }
aws-smithy-types = { version = "1.2", optional = true }
tokio = { version = "1.43", features = ["sync", "rt", "rt-multi-thread" ], optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
schemars = "1.2"
dotenvy = "0.15"
