[package]
name = "polaris_models"
version = "0.0.1"
description = "Model provider interface and registry for Polaris"
edition = "2024"

[lints]
workspace = true

[dependencies]
polaris_system = { path = "../polaris_system" }
async-trait = "0.1"
thiserror = "2.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2.0"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
