[package]
name = "polaris_tools"
version = "0.0.1"
description = "Tool framework for Polaris agents"
edition = "2024"

[lints]
workspace = true

[dependencies]
polaris_system = { path = "../polaris_system" }
polaris_models = { path = "../polaris_models" }
tool_macros = { path = "tool_macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
schemars = "1.2.0"
thiserror = "2.0"
indexmap = { version = "2.13.0", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
trybuild = "1.0"
