[package]
name = "persistence_macros"
version = "0.0.1"
description = "Derive macros for polaris_core_plugins persistence."
edition = "2024"
keywords = []

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
polaris_macro_utils = { path = "../../polaris_macro_utils", version = "0.0.1" }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
darling = "0.23"

[dev-dependencies]
polaris_core_plugins = { path = ".." }
serde = { version = "1", features = ["derive"] }
