[package]
name = "polaris_system_macros"
version = "0.0.1"
description = "Macros for polaris_system crate."
edition = "2024"
keywords = []
license = "Apache-2.0"
repository = "https://github.com/TeamRadiantAI/polaris/tree/main/crates/polaris_system/system_macros"
rust-version = "1.93.0"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
