[package]
name = "polaris_system_macros"
version = "0.0.1"
description = "Macros for polaris_system crate."
edition = "2024"
keywords = []

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
polaris_macro_utils = { path = "../../polaris_macro_utils", version = "0.0.1" }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
polaris_system = { path = ".." }
